[NM-160] fixed broken styles

--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -21,6 +21,7 @@
   height: 30px;
   width: 30px;
   padding: 0px;
+  background: #ffffff !important
 }
 
 .MuiTableCell-root {
